--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+cx-Freeze==6.11.1
+cx-Logging==3.0
 et-xmlfile==1.1.0
+importlib-metadata==4.12.0
+lief==0.12.1
 numpy==1.21.6
 openpyxl==3.0.10
+packaging==21.3
 pandas==1.3.5
+pyparsing==3.0.9
 PySide6==6.3.1
 PySide6-Addons==6.3.1
 PySide6-Essentials==6.3.1
@@ -9,4 +15,6 @@ python-dateutil==2.8.2
 pytz==2022.1
 shiboken6==6.3.1
 six==1.16.0
+typing_extensions==4.3.0
 xlrd==2.0.1
+zipp==3.8.0
